@@ -41,3 +41,4 @@ freenukum-0.1.tar.gz.sig
 *.gz
 *.gz.sig
 ChangeLog.sig
+freenukum.desktop
