@@ -4,3 +4,6 @@ SUBDIRS = \
 man6_MANS = doc/freenukum.6
 
 EXTRA_DIST = ${man6_MANS}
+
+desktopdir = $(datadir)/applications
+desktop_DATA = freenukum.desktop
