@@ -18,4 +18,4 @@ PKG_CHECK_MODULES(GLIB, glib-2.0)
 CFLAGS="$CFLAGS -Wall -Werror $GLIB_CFLAGS "`sdl-config --cflags`
 LDFLAGS="$LDFLAGS $GLIB_LIBS "`sdl-config --libs`
 
-AC_OUTPUT([Makefile src/Makefile])
+AC_OUTPUT([Makefile src/Makefile freenukum.desktop])
