@@ -1,0 +1,8 @@
+[Desktop Entry]
+Version=@PACKAGE_VERSION@
+Name=@PACKAGE_NAME@
+Type=Application
+Comment=Clone of the original Duke Nukum 1 Jump'n Run game
+Exec=freenukum
+TryExec=freenukum
+Categories=Game;ArcadeGame;ActionGame;
